syntax = "proto3";

option go_package = "laxo.vn/laxo/laxo/proto/gen";

package product;

service ProductService {
  rpc CreateFrame (CreateFrameRequest) returns (stream CreateFrameReply) {}
  rpc GetProductRetrieveUpdate (ProductRetrieveUpdateRequest) returns (stream ProductRetrieveUpdateReply) {}
}

message CreateFrameRequest {
  string imgID = 1;
}

message CreateFrameReply {
  string imgID = 1;
}

message ProductRetrieveUpdateRequest {
  string shopID = 1;
  string retrieveID = 2;
}

message ProductRetrieveUpdateReply {
  string currentStatus = 1;
  uint32  totalProducts = 2;
  uint32  currentProducts = 3;
}
